accounting for fixed header overlapping the site RHD-341

--- a/stylesheets/_mobile.scss
+++ b/stylesheets/_mobile.scss
@@ -284,6 +284,11 @@
 
 @include tablet-portrait-and-down {
 
+  // offset the header
+
+  body {
+    margin-top: 76px;
+  }
 
   header.main {
     background:black;
